Finished rough draft of working calculator

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="calc">
 
         <div class="display">
-            asdfasdf
+            
         </div>
-
+        <div class="non-display">
         <!-- numbers -->
-        <div class="allNumbers">
+        <!--<div class="allNumbers"> -->
             <button class="number" id="one">
                 1
             </button>
@@ -25,6 +25,11 @@
             <button class="number" id="three">
                 3
             </button>
+
+            <button class="operation" id="plus">
+                +
+            </button>
+
             <button class="number" id="four">
                 4
             </button>
@@ -34,6 +39,11 @@
             <button class="number" id="six">
                 6
             </button>
+
+            <button class="operation" id="minus">
+                &minus;
+            </button>
+
             <button class="number" id="seven">
                 7
             </button>
@@ -43,31 +53,28 @@
             <button class="number" id="nine">
                 9
             </button>
+
+            <button class="operation" id="times">
+                &times;
+            </button>
+
+            <button class="clear" >
+                A/C
+            </button>
+
             <button class="number" id="zero">
                 0
             </button>
+
+            <button class="equals">
+                =
+            </button>
+            
+            <button class="operation" id="divides">
+                &div;
+            </button>
+
         </div>
-
-        <!-- operations -->
-        <button class="operation" id="plus">
-            +
-        </button>
-        <button class="operation" id="minus">
-            &minus;
-        </button>
-        <button class="operation" id="times">
-            &times;
-        </button>
-        <button class="operation" id="divides">
-            &div;
-        </button>
-
-        <button class="clear" >
-            Clear
-        </button>
-        <button class="equals">
-            =
-        </button>
 
 
     </div>
